# decky_dict

./: .gitignore  README.md  main.py  package.json  package.sh  plugin.json  pnpm-lock.yaml  release.sh  tsconfig.json
backend-rs/: Cargo.toml  Cross.toml  build.sh
backend-rs/src/: api.rs  main.rs  x.rs
scripts/: build.sh  release.sh
src/: backend.ts  index.tsx
src/usdpl/: package.json  usdpl_front.d.ts  usdpl_front_bg.wasm.d.ts
