[package]
name = "decky_dict_rs"
version = "0.0.1"
edition = "2021"


[dependencies]
usdpl-back = { version = "0.5.3", features = ["blocking"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# logging
log = "0.4"
simplelog = "0.12"
xcb = "1.2.0"


[profile.release]
debug = false
strip = true
lto = true
codegen-units = 4
